Fixes a issue with the map on small devices, and adds some clean up code for the map. We got some serious memory leaks in our app :S

--- a/client/views/reports/views/map/map.scss
+++ b/client/views/reports/views/map/map.scss
@@ -2,6 +2,12 @@
  * Map: SCSS styles
  */
 
+// UI Pan Controller fix, google maps IE
+.gmnoprint div[title^="Pan"]
+{
+    opacity: 0 !important;
+}
+
 #map-canvas {
 	height: 550px;
 }
